--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,62 @@
-<html></html>
+<!DOCTYPE html>
+<!-- saved from url=(0029)http://bootswatch.com/united/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <title>{% block title %}Office Box{% endblock %}</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="utf-8">
+   <link rel="stylesheet" href="http://bootswatch.com/united/bootstrap.css" media="screen">
+   <link rel="stylesheet" href="http://bootswatch.com/bower_components/font-awesome/css/font-awesome.min.css">
+   <link rel="stylesheet" href="http://bootswatch.com/assets/css/bootswatch.min.css">
+   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+   <!--[if lt IE 9]>
+     <script src="../bower_components/bootstrap/assets/js/html5shiv.js"></script>
+     <script src="../bower_components/bootstrap/assets/js/respond.min.js"></script>
+   <![endif]-->
+
+ </head>
+ <body style="">
+
+   <div class="navbar navbar-default navbar-fixed-top">
+     <div class="container">
+       <div class="navbar-header">
+         <a href="#" class="navbar-brand">OfficeBox</a>
+         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+       </div>
+       <div class="navbar-collapse collapse" id="navbar-main">
+         
+
+         <ul class="nav navbar-nav navbar-right">
+           <li><a href="#" target="_blank">About Us</a></li>
+           <li><a href="#" target="_blank">Support</a></li>
+           <li><a href="#" target="_blank">Contact</a></li>
+         </ul>
+
+       </div>
+     </div>
+   </div>
+
+   <div class="container">
+     <div class="page-header" id="banner">
+       <div class="row">
+         <div class="col-lg-6">
+           <h1><img src="{{ url_for('static', filename='img/icon-logo.png') }}"></h1>
+           <p class="lead">Everything you need for your new office!</p>
+         </div>
+       </div>
+     </div>
+
+     {% block content %}
+        
+     {% endblock %}
+
+
+   <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+   <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+   <script src="{{ url_for('static', filename='js/bootswatch.js') }}/"></script>
+   <script src="{{ url_for('static', filename='js/bsa.js') }}"></script>
+   <script src="{{ url_for('static', filename='js/bsa(1).js') }}"></script>
+</body></html>
