changed company size labels

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,9 @@
               <label class="col-lg-2 control-label">Company's Stage</label>
               <div class="col-lg-10">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-success">Startup</button>
-                  <button type="button" class="btn btn-success">Medium-size</button>
+                  <button type="button" class="btn btn-success">Bootstrap</button>
+                  <button type="button" class="btn btn-success">Angel</button>
                   <button type="button" class="btn btn-success">VC Funded</button>
-                  <button type="button" class="btn btn-success">Enterprise</button>
                 </div>
               </div>
             </div>
