Created thanks page. Fixed import bugs. added init file

--- a/templates/order.html
+++ b/templates/order.html
@@ -18,7 +18,10 @@
 				<a href="#" class="list-group-item">Paper Stack<span class="badge">$19.99</span></a>
 				<a href="#" class="list-group-item">ATT Wireless<span class="badge">$29.99</span></a>
 				<a href="#" class="list-group-item active">Total: <strong>$145</strong><a>
-				<a href="/thanks" class="btn btn-success btn-block">Order</a>
+			    <form action="" method="POST" accept-charset="utf-8">
+			        <input type="hidden" name="id" value="101" id="id">
+			        <p><input type="submit" class="btn btn-success btn-block" value="Continue &rarr;"></p>
+			    </form>
 			</div>
 		</div>
 		<div class="col-lg-3">
